build(Dockerfile, docker-compose.yml):도커화 완료, build(application.yml): 도커화에 맞게 db url 수정, build(Docker directory): 도커 실행 시 스키마, 샘플 데이터 sql 복사, docs(README): README 설명 추가 및 수정. 실행 방법 추가, test(): 책에서 했던 test들 모두 주석 처리 (내부 구조 변경)